2009-01-03  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: deliver notification depending on
	presence-based-delivery configuration (EJAB-827). notification code
	rewrite.

	* src/mod_pubsub/mod_pubsub.erl: code cleanning, minor bugfixes
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: prevent subscribing with full jid,
	waiting for full jid support (EJAB-701)

2008-12-29  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_c2s.erl: Bugfix in "from" attribute checking

2008-12-28  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Add resource to the from packet attribute
	if missing (EJAB-812).

2008-12-24  Badlop  <badlop@process-one.net>

	* src/aclocal.m4: Fixes in configure script: fix
	disable-disable_zlib and disable-pam; in case of problems, PAM
	verification aborts with error instead of warning. (EJAB-787)
	* src/configure.ac: Likewise
	* src/configure: Likewise

2008-12-23  Badlop  <badlop@process-one.net>

	* src/acl.erl: New ACL: shared_group (thanks to Maxim Ryazanov)
	* doc/guide.tex: Likewise

	* src/mod_shared_roster.erl: Push new group members when
	registered or manually added to group: EJAB-730 EJAB-731 EJAB-732
	EJAB-767 EJAB-794. When user is added to group, push it to other
	members, and other members to it. When user is removed from group,
	push deletion to other members, and other members to it. When user
	is registered, push him to members of group @all@. When user is
	deleted, push deletion to members of group @all@. Document several
	functions in mod_shared_roster.

	* src/ejabberd_auth.erl: Rename hook user_registered to
	register_user, for name consistency with the widely used hook
	remove_user. Run hook register_user in ejabberd_auth, so it's run
	when account is created with any method. Run hook remove_user in