@@ -244,7 +244,7 @@ is_user_exists(User, Server) ->
     end.
 
 %% @spec (User, Server) -> ok
-%% Remove user.
+%% @doc Remove user.
 %% Note: it returns ok even if there was some problem removing the user.
 remove_user(User, Server) ->
     LUser = jlib:nodeprep(User),
@@ -257,7 +257,7 @@ remove_user(User, Server) ->
 	ok.
 
 %% @spec (User, Server, Password) -> ok | not_exists | not_allowed | bad_request
-%% Remove user if the provided password is correct.
+%% @doc Remove user if the provided password is correct.
 remove_user(User, Server, Password) ->
     LUser = jlib:nodeprep(User),
     LServer = jlib:nameprep(Server),
